# SO-100-arm

so_arm_100/: CMakeLists.txt  package.xml
so_arm_100_bringup/: package.xml  setup.cfg  setup.py
so_arm_100_bringup/launch/: hardware.launch.py
so_arm_100_bringup/so_arm_100_bringup/: so_arm_100_5dof_cmd_relay.py
so_arm_100_description/: CMakeLists.txt  package.xml
so_arm_100_description/gazebo/: so_arm_100_5dof.gazebo.xacro
so_arm_100_description/launch/: joint_state_pub_gui.launch.py
so_arm_100_description/ros2_control/: so_arm_100_5dof_position.ros2_control.xacro
so_arm_100_description/urdf/: so_arm_100_5dof.urdf.xacro  so_arm_100_5dof_arm.urdf.xacro  so_arm_100_5dof_hardware.urdf.xacro
so_arm_100_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
so_arm_100_moveit_config/config/: controllers_5dof.yaml  controllers_7dof.yaml  hardware_controllers.yaml  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.xtra.rviz  moveit_controllers.yaml  ros2_controllers.yaml  so_arm_100.ros2_control.xacro  so_arm_100.srdf  so_arm_100.urdf.xacro
so_arm_100_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py
