<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>so_arm_100</name>
  <version>0.3.0</version>
  <description>SO-100 meta ROS 2 package.</description>

  <maintainer email="bruk@signalbotics.com">Bruk Gebregziabher</maintainer>
  <license>Apache 2.0</license>
  <url type="repository">https://github.com/brukg/SO-100-arm</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>so_arm_100_bringup</exec_depend>
  <exec_depend>so_arm_100_description</exec_depend>
  <exec_depend>so_arm_100_moveit_config</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
