<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>so_arm_100_bringup</name>
  <version>0.3.0</version>
  <description>SO-100 bringup ROS 2 package.</description>

  <maintainer email="bruk@signalbotics.com">Bruk Gebregziabher</maintainer>
  <license>Apache 2.0</license>
  <url type="repository">https://github.com/brukg/SO-100-arm</url>

  <depend>rclpy</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_image</depend>
  <depend>so_arm_100_hardware</depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>so_arm_100_description</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
